--- a/IDL Analysis.Rmd
+++ b/IDL Analysis.Rmd
@@ -83,14 +83,23 @@ if(!require(janitor)){
     install.packages("janitor", dependencies = TRUE)
     library(janitor)
 }
+if(!require(stringr)){
+    install.packages("stringr", dependencies = TRUE)
+    library(stringr)
+}
+library(DataExplorer)
 ```
 ---
 # Executive Summary
-This documentation outlines the preprocessing of RBSA data to reproduce the analytical data frame and model as described in the Buylova (2020) Spotlight on energy efficiency in Oregon article. Buyolva (2020) used two data sets: a household energy audit survey - the residential building stock assessment (RBSA) completed by the Northwest Energy Efficiency Association (NEEA) in 2017 and the American Community Survey (ACS) 2012-2017 5-year estimates data to investigate the dynamics between energy use and socio-demographic characteristics in spatial modeling of residential energy consumption. This documentation is focused on preprocessing the RBSA data.
+The purpose of this documentation is to outline the preprocessing of the residential building stock assessment (RBSA) dataset to determine its research potential. Results from the exploratory data analysis suggest that the RBSA data is a valuable dataset for identifying energy consumption and equity issues. The RBSA allows researchers to identify energy efficiency opportunities, the efficiency of specific appliances, and much more. The RBSA dataset includes residential demographic data, allowing researchers to disaggregate energy efficiency by family size, income, education level, age, and other demographic constructs. However, the RBSA demographic data frame does not provide race/ethnicity nor gender data. More research opportunities become available when the RBSA data is merged with other data. For example, Buylova (2020) was able to identify which regions in Oregon and racial/ethnic groups were more susceptible to high energy burden by combining the RBSA data with the American Community Survey (ACS) data.
 
-The Department of Housing and Urban Development (HUD) considers people spending more than 30% of their income on housing as housing burdened. Housing costs include rent, mortgage payment, property taxes, utilities, and housing insurance (Lin, 2018). There has recently been a spotlight on how energy prices, i.e. utilities, contribute to housing burden (Buylova, 2020). Energy bills of more than 6-10% of income is considered unaffordable (Hernandez & Bird, 2010; Heindl, 2015; Kontokosta et al., 2019). Previous research demonstrates energy cost burden disproportionately affect lower income households, largely because they are most at risk for living in substandard and inefficient housing (Hernandez & Phillips, 2015). Energy upgrades can  help alleviate energy cost burden and potentially housing burden by saving a low-income multifamily household up to $1,500 per year per household (Kontokosta et al., 2019).
+This document loosely follows the methods Buylova employed to conduct her analysis. Buylova's analysis included housing variables and household characteristic variables. My data exploration includes cleaning and wrangling the RBSA data to create the same variables Buylova used and more. As aforementioned, Buylova (2020) used the RBSA data completed by the Northwest Energy Efficiency Association (NEEA) in 2017 and the 2012-2017 ACS data to investigate the dynamics between energy use and socio-demographic characteristics in spatial modeling of residential energy consumption. The underlying research inquiry guiding this exploratory data analysis of the RBSA data is the confluence of energy cost and housing burden.
 
-Energy cost burden is a function of both income and energy consumption. Drehobl and Ross (2016) found that an average low-income household energy burden was 7.2%, which is higher than an average higher income household energy burden of 2.3%. Findings from an evaluation of a federal energy assistance program determined that low-income households represent 92% of all households with energy burden of 10% (APPRISE, 2005). Federal Low-Income Home Energy Assistance Program (LIHEAP) designs its funding distribution mechanism based on energy burden levels. Income is used as the main qualifier for this program.
+The Department of Housing and Urban Development (HUD) considers people spending more than 30% of their income on housing as housing burdened. Housing costs include rent, mortgage payment, property taxes, utilities, and housing insurance (Lin, 2018). There has recently been a focus on how energy prices, i.e., utilities, contribute to housing burden. Energy bills of more than 6-10% of income are considered unaffordable (Hernandez & Bird, 2010; Heindl, 2015; Kontokosta et al., 2019). Previous research demonstrates that the energy cost burden disproportionately affects lower-income households because they are most at risk for living in substandard and inefficient housing (Hernandez & Phillips, 2015). Energy upgrades can help alleviate energy cost burden and potentially housing burden by saving a low-income multifamily household up to $1,500 per year per household (Kontokosta et al., 2019).
+
+Energy cost burden is a function of both income and energy consumption. Drehobl and Ross (2016) found that an average low-income household energy burden was 7.2%, higher than an average higher-income household energy burden of 2.3%. Findings from a federal energy assistance program evaluation determined that low-income households represent 92% of all households with an energy burden of 10% (APPRISE, 2005). The Federal Low-Income Home Energy Assistance Program designs its funding distribution mechanism based on energy burden levels. Income is used as the primary qualifier for this program.
+
+This document is organized into five sections to illustrate the potential of the RBSA data. Section 1 describes the data; section 2 outlines the data cleaning and wrangling process; section 3 examines ethical considerations for using the data; section 4 suggests inferential and machine learning models that can be done with the data. Finally, section 5 concludes by providing uses of the RBSA data when merged with other data.
 
 Suggested Readings:
 
@@ -124,6 +133,11 @@ room_df <- read_csv("RBSA-II-Combined-Database/Room.csv") #has the area of diffe
 site_df <- read_csv("RBSA-II-Combined-Database/SiteDetail.csv")  #redundant with ols_df
 
 energyuse_df <- read_csv("RBSA-II-Combined-Database/SiteInterview_HomeEnergyUse.csv") #has data on energy use and energy star appliances
+```
+
+
+```{r}
+introduce(ols_df)
 ```
 
 ---
@@ -165,7 +179,7 @@ sum(is.na((pug_sound_ols)))
 ```{r}
 #Select variables of interest
 pug_short <- pug_sound_ols %>%
-  select(`Cadmus ID`, State, County,Region, `Home Type - FMP Detailed`, `Home Type - Final`, `Year Built`,`Primary Heating System`, `Qty Bedrooms`,`Reported Income`, `Do you own or rent your home`, Ownership, `Qty Occupants Between 65 Years or Older`, `Qty Occupants Between Less than 1 Year`, `Qty Occupants Between 6 and 10 Years`, `Qty Occupants.x`, `Qty Occupants.y`, `Qty Occupants Between Less than 1 Year`, `Qty Occupants Between 1 and 5 Years`, `Qty Occupants Between 6 and 10 Years`, `Qty Occupants Between 11 and 18 Years`, `Qty Occupants Between 19 and 45 Years`, `Qty Occupants Between 46 and 64 Years`, `Qty Occupants Between 65 Years or Older`, `Conditioned Area`, `Annual Electric Usage (kBtu)`)
+  select(`Cadmus ID`, State, County,Region, `Home Type - FMP Detailed`, `Home Type - Final`, `Year Built`,`Primary Heating System`, `Qty Bedrooms`,`Reported Income`, `Do you own or rent your home`, Ownership, `Qty Occupants Between 65 Years or Older`, `Qty Occupants Between Less than 1 Year`, `Qty Occupants Between 6 and 10 Years`, `Qty Occupants.x`, `Qty Occupants.y`, `Qty Occupants Between Less than 1 Year`, `Qty Occupants Between 1 and 5 Years`, `Qty Occupants Between 6 and 10 Years`, `Qty Occupants Between 11 and 18 Years`, `Qty Occupants Between 19 and 45 Years`, `Qty Occupants Between 46 and 64 Years`, `Qty Occupants Between 65 Years or Older`, `Conditioned Area`, contains("kBtu"))
 ```
 
 ```{r}
@@ -181,7 +195,7 @@ sum(is.na(pug_short))
 colSums(is.na(pug_short))
 
 # Change "prefer not say" and "Unkown" to NAs
-pug_short[pug_short == "Unknown" | pug_short == "Prefer not to say"] <- NA
+pug_short[pug_short == "Unknown" | pug_short == "Prefer not to say" | pug_short == "N/A"] <- NA
 
 ##Turn Certain variables into factors
 pug_short_clean <- pug_short %>%
@@ -231,14 +245,49 @@ pug_short_elder$children <- factor(pug_short_elder$children, levels = c("yes", "
 
 #Change character variables to numeric
 pug_short_elder$`Annual Electric Usage (kBtu)` <- as.numeric(pug_short_elder$`Annual Electric Usage (kBtu)`)
+pug_short_elder$`Annual Gas Usage (kBtu)` <- as.numeric(pug_short_elder$`Annual Gas Usage (kBtu)`)
 pug_short_elder$`Conditioned Area` <- as.numeric(pug_short_elder$`Conditioned Area`)
 
 #Ceate EUI variable
+#pug_short_eui <- 
 pug_short_eui <- pug_short_elder %>%
-  mutate(eui = `Annual Electric Usage (kBtu)`/`Conditioned Area`)
+  rowwise() %>% 
+  mutate(annual_energy_use = sum(c_across(contains("kBtu")), na.rm = TRUE)) %>% 
+  mutate(annual_energy_use = na_if(annual_energy_use, 0)) %>% 
+  mutate(eui = annual_energy_use/`Conditioned Area`)
 
-#clean names
-pug_eui <- clean_names(pug_short_eui)
+#Tranform the income variable 
+pug_eui_income <- pug_short_eui %>% 
+  mutate(Reported_Income = str_replace(`Reported Income`, "\\s", "_")) %>% 
+  separate(Reported_Income, into = c("lower_income", "higher_income"), sep = "_") %>% 
+  mutate(lower_income = parse_number(lower_income),
+         higher_income = parse_number(higher_income)) %>%
+  mutate(lower_income = if_else(is.na(lower_income), higher_income, lower_income),
+         higher_income = if_else(is.na(higher_income), lower_income, higher_income)) %>% 
+  mutate(Average_Reported_Income = (lower_income+higher_income)/2) %>% 
+  clean_names()
+
+# Create Socioeconomic Status (SES) Variable based on average income and household size 
+# the low-wage income was based on the Washington State Low-Income Weatherization Program, https://www.commerce.wa.gov/wp-content/uploads/2021/02/2021-WA-Low-Income-Eligiblity-Guidelines.pdf 
+
+# Middle class numbers were derived from DSHS State Median Income Charts. Multiplying monthly income by 11 (months).  https://www.dshs.wa.gov/esa/eligibility-z-manual-ea-z/state-median-income-chart 
+
+#Note that these numbers are for 2021 and the data is from 2016. More research should be done to better reflect SES in the data
+
+pug_eui <- pug_eui_income %>% 
+  mutate(ses = case_when(
+    average_reported_income < 31752 ~ "low",
+    average_reported_income <= 41521 & total_occupants == 2 ~ "low",
+    average_reported_income <= 51291 & total_occupants == 3 ~ "low",
+    average_reported_income <= 61061 & total_occupants >= 4 ~ "low",
+    average_reported_income = 4454*11 & average_reported_income < 5825*11 & (total_occupants == 1) ~ "middle",
+    average_reported_income = 5825*11 & average_reported_income < 7195*11 & (total_occupants >= 2) ~ "middle",
+    average_reported_income = 7195*11 & average_reported_income < 8566*11 & (total_occupants >= 3) ~ "middle",
+    average_reported_income = 8566*11 & average_reported_income < 9936*11 & (total_occupants >= 4) ~ "middle",
+    TRUE ~ "high")
+    ) %>%
+  mutate(ses = ifelse(is.na(average_reported_income), NA, ses)) %>% 
+  mutate(ses = factor(ses, levels = c("low", "middle", "high")))
 ```
 
 ---
